Fix: Logo not resizing on small screens.

--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -19,6 +19,12 @@ a.home-button {
     box-shadow: none;
     scale: calc($max-scale - 0.1);
   }
+  @include Mixins.mediaQuery(Theme.$SmPhoneViewport) {
+    .logo{
+      width: 100%;
+      height: auto;
+    }
+  }
 }
 // }
 
